[gd_scene load_steps=5 format=2]

[ext_resource path="res://sounds/sound_manager.gd" type="Script" id=1]
[ext_resource path="res://sounds/meltdown-start.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/sequence-fail.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/sequence-success.wav" type="AudioStream" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MeltdownAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SequenceFailAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SequenceSuccessAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
